# music_selector

./: CMakeLists.txt  album.cpp  album.h  disk.cpp  disk.h  disksparser.cpp  disksparser.h  diskwidget.cpp  diskwidget.h  diskwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newdiskdialog.cpp  newdiskdialog.h  newdiskdialog.ui  parseconfig.h  pch.h
